   * Fixed a crash when trying to use scrollbars in an invisible widget.
 * Miscellaneous and bug fixes:
   * Fix another savegame cache corruption
   * Fixed bug #13099: MP lobby player list becomes inaccurate over time
   * Fix bug #13118: OOS/replay bug when moving near ambushed units
   * Better fog update after "slow" and "stone" attacks
   * Updated Doxyfile to 1.5.6 format

Version 1.5.12:
 * Add-on server:
   * Ignore case on add-on (file)names (bug #13080)
   * Disallow uploading of add-ons with no title, type, author, version or
     description specified and warn about invalid versions
 * Graphics:
   * New portrait for the female Thief
   * New tiles for summer and fall deciduous and mixed forests
   * Deciduous and mixed forests now used in several campaigns (not all, yet)
   * New tiles for dirt
   * Fixed a lot of small terrain transition glitches
 * Language and i18n:
   * updated translations: Chinese (Simplified), Czech, French, German, Italian,
     Polish, Portuguese (Brazil), Spanish, Turkish
 * Multiplayer:
   * Updated maps: Howling Ghost Badlands, Sullas Ruins, Isar's Cross
 * Music and sound effects:
   * Fix a regression which caused the endlevel music to be played even when
     skipping linger mode (e.g. result=continue or continue_no_save).
 * Miscellaneous and bug fixes:
   * Removed last binaryWML references by making the save_index gzip
     compressed. (We can still receive binaryWML via the network.)
 * User interface:
   * Listbox columns have the same width again
   * Fix false "click" sometimes triggered at end of unit move (bug #12712)
   * Now clear fog/shroud before an attack when doing a move+attack action
   * Fix broken auto-undo when trying several move+attack with the same unit
   * Changed the widgets in the in game message dialog
   * The multiplayer dialog shows tooltips again
   * The textbox history now uses CTRL+TAB and CTRL+SHIFT+TAB
   * Properly set the cursor when opening a dialog (bug #12961)