@@ -12,6 +12,10 @@ Version 1.5.12+svn:
    * Fix bug #13118: OOS/replay bug when moving near ambushed units
    * Better fog update after "slow" and "stone" attacks
    * Updated Doxyfile to 1.5.6 format
+   * Renamed some [ai] attributes to use correct English spelling.
+     Support for their misspelled forms will be removed in 1.7.0.
+     * simple_targetting -> simple_targetting
+     * scout_village_targetting -> scout_village_targeting
 
 Version 1.5.12:
  * Add-on server:
